--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engins": {
+    "node": "v16.13.0"
+  },
   "name": "chaut",
   "version": "1.0.0",
   "description": "application for chat on livehouse",
