--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "ioredis": "^5.2.2",
     "socket.io": "^4.4.1",
     "typescript": "^4.6.2"
   },
